--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "chart.js": "^4.4.2",
     "polished": "^4.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -58,6 +61,7 @@
     "@storybook/react": "^8.0.6",
     "@storybook/react-webpack5": "^8.0.6",
     "@storybook/test": "^8.0.6",
+    "@types/react-table": "^7.7.20",
     "@types/styled-components": "^5.1.34",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
