--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
@@ -61,6 +61,7 @@
     "@storybook/react": "^8.0.6",
     "@storybook/react-webpack5": "^8.0.6",
     "@storybook/test": "^8.0.6",
+    "@types/chart.js": "^2.9.32",
     "@types/react-table": "^7.7.20",
     "@types/styled-components": "^5.1.34",
     "eslint-plugin-storybook": "^0.8.0",
