--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "react-tag-input": "^6.9.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -63,6 +66,7 @@
     "@storybook/test": "^8.0.6",
     "@types/chart.js": "^2.9.32",
     "@types/react-table": "^7.7.20",
+    "@types/react-tag-input": "^6.6.6",
     "@types/styled-components": "^5.1.34",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
