--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "chart.js": "^4.4.2",
+    "markdown-it": "^14.1.0",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "react-tag-input": "^6.9.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -65,6 +66,8 @@
     "@storybook/react-webpack5": "^8.0.6",
     "@storybook/test": "^8.0.6",
     "@types/chart.js": "^2.9.32",
+    "@types/markdown-it": "^14.0.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.20",
     "@types/react-tag-input": "^6.6.6",
     "@types/styled-components": "^5.1.34",
