--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dnd-html5-backend": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-markdown-editor-lite": "^1.3.4",
