--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "markdown-it": "^14.1.0",
     "polished": "^4.3.1",
