--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "markdown-it": "^14.1.0",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
-    "react-dnd-html5-backend": "^3.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18.2.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
+    "react-tag-input": "^6.9.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
