--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
@@ -30,7 +31,6 @@
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
-    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
