--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
@@ -73,6 +74,7 @@
     "@storybook/test": "^8.0.6",
     "@types/chart.js": "^2.9.32",
     "@types/markdown-it": "^14.0.1",
+    "@types/react-paginate": "^7.1.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-table": "^7.7.20",
     "@types/react-tag-input": "^6.6.6",
