added link with other services

--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "axios": "^1.6.8",
     "bigeus-sdk": "^2.7.0",
     "chart.js": "^4.4.2",
+    "danielbonifacio-sdk": "^3.4.0",
+    "danielbonifacio-sdk-2": "^2.7.1",
     "date-fns": "^3.6.0",
+    "jwt-decode": "^4.0.0",
     "markdown-it": "^14.1.0",
+    "pkce-challenge": "^4.1.0",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
